@@ -4353,23 +4353,29 @@ patch_City_ai_choose_production (City * this, int edx, City_Order * out)
 	}
 }
 
-
 int __fastcall
 patch_Unit_disembark_passengers (Unit * this, int edx, int tile_x, int tile_y)
 {
-	// It's also impossible to disemark units that are being escorted by an immobile unit. I think this is because the movement code will try to
-	// move the escorter first. To fix this, break escort relationships with immobile units before disembarking.
-	Tile * tile = tile_at (this->Body.X, this->Body.Y);
-	if ((is->current_config.patch_disembark_immobile_bug) &&
-	    (tile != NULL))
+	// Break any escort relationships if the escorting unit can't move onto the target tile. This prevents a freeze where the game continues
+	// trying to disembark units because an escortee could disembark except is blocked by the fact that its escorter can't.
+	Tile * tile   = tile_at (this->Body.X, this->Body.Y),
+	     * target = tile_at (tile_x      , tile_y);
+	if (is->current_config.patch_disembark_immobile_bug && (tile != NULL) && (target != NULL)) {
+		enum SquareTypes target_terrain = target->vtable->m50_Get_Square_BaseType (target);
 		FOR_UNITS_ON (uti, tile) {
 			Unit * escortee = get_unit_ptr (uti.unit->Body.escortee);
-			if ((escortee != NULL) &&
-			    (uti.unit->Body.Container_Unit == this->Body.ID) &&
-			    (escortee->Body.Container_Unit == this->Body.ID) &&
-			    (UnitType_has_ability (&p_bic_data->UnitTypes[uti.unit->Body.UnitTypeID], __, UTA_Immobile)))
+			if (   (escortee != NULL)
+			    && (uti.unit->Body.Container_Unit == this->Body.ID)
+			    && (escortee->Body.Container_Unit == this->Body.ID)
+			    && (   UnitType_has_ability (&p_bic_data->UnitTypes[uti.unit->Body.UnitTypeID], __, UTA_Immobile)
+				|| (   is->current_config.disallow_trespassing
+				    && check_trespassing (uti.unit->Body.CivID, tile, target)
+				    && ! is_allowed_to_trespass (uti.unit))
+				|| ! Unit_can_enter_terrain (uti.unit, __, target_terrain)))
 				Unit_set_escortee (uti.unit, __, -1);
 		}
+	}
+
 	return Unit_disembark_passengers (this, __, tile_x, tile_y);
 }
 
