@@ -1,6 +1,7 @@
 - Option to allow airdrops without airports
 - Can increase unit maintenance costs based on their build costs
 - Adjustable AI worker requirement
+- Fix freezes caused by undisembarkable escorting unit
 
 * RELEASE 17 PREVIEW 1
 - Optimize computation of trade networks
